// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c6:focus {
  color: #f66663;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3[type="number"] {
  -moz-appearance: textfield;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c4 {
  margin-top: 2.4rem;
}

.c5 {
  display: block;
  margin-top: 1.6rem;
}

.c7 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media print {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <label
    class="c0"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="c1 c2"
  >
    <input
      class="c3"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value=""
    />
  </span>
  <p
    class="c4"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="c5"
    >
      Consultez
       
      <button
        class="c6 c7"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c8:focus {
  color: #f66663;
}

.c5 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3[type="number"] {
  -moz-appearance: textfield;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c6 {
  margin-top: 2.4rem;
}

.c7 {
  display: block;
  margin-top: 1.6rem;
}

.c9 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media print {
  .c8 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <label
    class="c0"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="c1 c2"
  >
    <input
      class="c3"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="9999"
    />
  </span>
  <div
    class="c4"
  >
    <p
      class="c5"
    >
      Aucun résultat n’a été trouvé.
    </p>
  </div>
  <p
    class="c6"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="c7"
    >
      Consultez
       
      <button
        class="c8 c9"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c8:focus {
  color: #f66663;
}

.c5 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3[type="number"] {
  -moz-appearance: textfield;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c6 {
  margin-top: 2.4rem;
}

.c7 {
  display: block;
  margin-top: 1.6rem;
}

.c9 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media print {
  .c8 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <label
    class="c0"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="c1 c2"
  >
    <input
      class="c3"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="8888"
    />
  </span>
  <div
    class="c4"
  >
    <p
      class="c5"
    >
      <svg
        aria-labelledby="title desc"
        class="__react-svg-spinner_circle"
        height="1em"
        role="img"
        style="animation-duration: 750ms;"
        viewBox="0 0 32 32"
        width="1em"
      >
        <title
          id="title"
        >
          Circle loading spinner
        </title>
        <desc
          id="desc"
        >
          Image of a partial circle indicating "loading."
        </desc>
        <style>
          
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
        </style>
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="12"
          role="presentation"
          stroke="rgba(0,0,0,0.4)"
          stroke-dasharray="43.982297150257104"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
       Recherche des convention collectives...
    </p>
  </div>
  <p
    class="c6"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="c7"
    >
      Consultez
       
      <button
        class="c8 c9"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c16:focus {
  color: #f66663;
}

.c8 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3[type="number"] {
  -moz-appearance: textfield;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c11 {
  display: block;
  padding: 1.6rem 0;
  padding-top: 0;
  color: #7994d4;
  font-weight: 600;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13 {
  display: block;
  padding: 1.6rem 0;
  color: #7994d4;
  font-weight: 600;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  font-weight: normal;
}

.c5 + .c5 {
  margin-top: 1.6rem;
}

.c9 + .c9 {
  border-top: 1px solid #bbcadf;
}

.c10:last-of-type > *:last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}

.c2 {
  width: 100%;
}

.c14 {
  margin-top: 2.4rem;
}

.c15 {
  display: block;
  margin-top: 1.6rem;
}

.c17 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 1.4rem;
  }
}

@media print {
  .c16 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <label
    class="c0"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="c1 c2"
  >
    <input
      class="c3"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="1234"
    />
  </span>
  <div
    class="c4"
  >
    <div
      class="c5 c6 "
    >
      <h3
        class="c7"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (2
         
        résultats)
      </h3>
      <ul
        class="c8"
      >
        <li
          class="c9 c10"
        >
          <a
            class="c11"
            href="/convention-collective/275-small-titre"
          >
            small titre
             
            <span
              class="c12"
            >
              (IDCC 
              0275
              )
            </span>
          </a>
        </li>
        <li
          class="c9 c10"
        >
          <a
            class="c13"
            href="/convention-collective/276-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="c12"
            >
              (IDCC 
              0276
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="c14"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="c15"
    >
      Consultez
       
      <button
        class="c16 c17"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match 1`] = `
.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  position: relative;
  display: block;
  margin: 3.2rem 0 2rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.625;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c15:focus {
  color: #f66663;
}

.c8 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3[type="number"] {
  -moz-appearance: textfield;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c11 {
  display: block;
  padding: 1.6rem 0;
  padding-top: 0;
  color: #7994d4;
  font-weight: 600;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  font-weight: normal;
}

.c5 + .c5 {
  margin-top: 1.6rem;
}

.c9 + .c9 {
  border-top: 1px solid #bbcadf;
}

.c10:last-of-type > *:last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}

.c2 {
  width: 100%;
}

.c13 {
  margin-top: 2.4rem;
}

.c14 {
  display: block;
  margin-top: 1.6rem;
}

.c16 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 1.4rem;
  }
}

@media print {
  .c15 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <label
    class="c0"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="c1 c2"
  >
    <input
      class="c3"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="4567"
    />
  </span>
  <div
    class="c4"
  >
    <div
      class="c5 c6 "
    >
      <h3
        class="c7"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="c8"
      >
        <li
          class="c9 c10"
        >
          <a
            class="c11"
            href="/convention-collective/4567-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="c12"
            >
              (IDCC 
              4567
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="c13"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="c14"
    >
      Consultez
       
      <button
        class="c15 c16"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching by text, should use enterprise API 1`] = `
.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c8:focus {
  color: #f66663;
}

.c5 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
  margin: 0;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c3 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: left;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3[type="number"] {
  -moz-appearance: textfield;
}

.c3::-webkit-outer-spin-button,
.c3::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3:invalid {
  border-color: #eb5757;
}

.c3::-webkit-input-placeholder {
  color: #9298af;
}

.c3::-moz-placeholder {
  color: #9298af;
}

.c3:-ms-input-placeholder {
  color: #9298af;
}

.c3::placeholder {
  color: #9298af;
}

.c3:focus {
  border-color: #7994d4;
}

.c3:focus::-webkit-input-placeholder {
  color: transparent;
}

.c3:focus::-moz-placeholder {
  color: transparent;
}

.c3:focus:-ms-input-placeholder {
  color: transparent;
}

.c3:focus::placeholder {
  color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 0.4rem;
  font-weight: 600;
  font-size: 1.4rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: 1.6;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c6 {
  margin-top: 2.4rem;
}

.c7 {
  display: block;
  margin-top: 1.6rem;
}

.c9 {
  color: #7994d4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  margin-top: 2rem;
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.4rem;
  }
}

@media print {
  .c8 {
    display: none;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1rem;
    padding-right: 2rem;
  }
}

<div>
  <label
    class="c0"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="c1 c2"
  >
    <input
      class="c3"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="hello"
    />
  </span>
  <div
    class="c4"
  >
    <p
      class="c5"
    >
      Le service de recherche est indisponible.
    </p>
  </div>
  <p
    class="c6"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="c7"
    >
      Consultez
       
      <button
        class="c8 c9"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;
